# docs/openapi/fleet.yaml
@@ -10,7 +10,7 @@ servers:
   - url: '{protocol}://{hostname}:{port}/api'
     variables:
       protocol:
-        enum: [http, https]
+        enum: [ http, https ]
         default: http
       port:
         default: "8080"
@@ -47,11 +47,7 @@ paths:
                 items:
                   $ref: '#/components/schemas/IdResponse'
         default:
-          description: Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
+          $ref: '#/components/responses/ErrorResponse'
     get:
       tags:
         - Fleet
@@ -67,11 +63,7 @@ paths:
                 items:
                   $ref: '#/components/schemas/FleetResponse'
         default:
-          description: Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
+          $ref: '#/components/responses/ErrorResponse'
   /vehicle:
     post:
       tags:
@@ -93,11 +85,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/IdResponse'
         default:
-          description: unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
+          $ref: '#/components/responses/ErrorResponse'
   /vehicle/{id}:
     parameters:
       - in: path
@@ -119,11 +107,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/VehicleResponse'
         default:
-          description: not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
+          $ref: '#/components/responses/ErrorResponse'
 
 components:
   securitySchemes:
@@ -131,6 +115,25 @@ components:
       type: http
       scheme: bearer
       bearerFormat: JWT
+  responses:
+    ErrorResponse:
+      description: Error
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
+    400ErrorResponse:
+      description: Bad Request
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
+    404ErrorResponse:
+      description: Not found
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
 
   schemas:
     FleetResponse:
@@ -172,7 +175,7 @@ components:
 
     CreateFleet:
       type: object
-      required: [ name, capacity ]
+      required: [ name, capacity, vehicleTypes ]
       properties:
         name:
           type: string
@@ -183,7 +186,18 @@ components:
           example: 10
           x-oapi-codegen-extra-tags:
             validate: required,gt=0
-
+        vehicleTypes:
+          type: array
+          description: Allowed vehicle types in this Fleet
+          items:
+            type: string
+            enum:
+              - truck
+              - bus
+              - van
+              - car
+          x-oapi-codegen-extra-tags:
+            validate: required
     CreateVehicleRequest:
       type: object
       required: [ vin ]
